pagehepler版本太低  model映射错误

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,7 @@ mapper:
     identity: MYSQL
 
 pagehelper:
-    helperDialect: oracle
+    helperDialect: MYSQL
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
