--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,3 +41,7 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+# 打印sql
+logging:
+  level:
+     com.aitian.salary.mapper : debug
