--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://127.0.0.1:3306/salary
+        url: jdbc:mysql://127.0.0.1:3306/salary?useUnicode=true&characterEncoding=utf-8
         username: root
         password: mysql
         driver-class-name: com.mysql.jdbc.Driver
