--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://127.0.0.1:3306/salary?useUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://111.230.39.154:3306/salary?useUnicode=true&characterEncoding=utf-8
         username: root
         password: mysql
         driver-class-name: com.mysql.jdbc.Driver
@@ -31,6 +31,10 @@ spring:
          exclude: WEB-INF/** #classpath目录下的WEB-INF文件夹内容修改不重启
       livereload:
           enabled: true
+    http:
+      multipart:
+        maxFileSize:100Mb
+        maxRequestSize:100Mb
 mapper:
     mappers: com.aitian.salary.Utils.BaseMapper
     not-empty: false
