--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
     datasource:
         name: test
-#        url: jdbc:mysql://localhost:3306/salary?useUnicode=true&characterEncoding=utf-8
-        url: jdbc:mysql://111.230.39.154:3306/salary?useUnicode=true&characterEncoding=utf-8
+        url: jdbc:mysql://180.76.243.118:3306/salary?useUnicode=true&characterEncoding=utf-8
+#        url: jdbc:mysql://111.230.39.154:3306/salary?useUnicode=true&characterEncoding=utf-8
         username: root
         password: mysql
         driver-class-name: com.mysql.jdbc.Driver
